Removed trp3Chat.less display: inline-block; from trpChatContainer to fix newest message being partially hidden under the chat-input-wrapper

--- a/public/less/trp3Chat.less
+++ b/public/less/trp3Chat.less
@@ -42,7 +42,6 @@
 
 .trpChatContainer {
   box-sizing: border-box;
-  display: inline-block;
   width: 100%;
   height: 100%;
   overflow: auto;
